Support for logging profile in VS (#2078)

--- a/docs/config_examples/customResource/Policy/sample-policy.yaml
+++ b/docs/config_examples/customResource/Policy/sample-policy.yaml
@@ -15,3 +15,6 @@ spec:
     udp: /Common/udp
     http: /Common/http
     http2: /Common/http2
+    logProfiles:
+      - /Common/Log all requests
+      - /Common/local-dos
