--- a/docs/config_examples/customResourceDefinations/customresourcedefinitions.yml
+++ b/docs/config_examples/customResourceDefinations/customresourcedefinitions.yml
@@ -43,9 +43,6 @@ spec:
                 waf:
                   type: string
                   pattern: '^\/([A-z0-9-_+]+\/)*([A-z0-9]+\/?)*$'
-                firewallPolicy:
-                  type: string
-                  pattern: '^\/([A-z0-9-_+]+\/)*([A-z0-9]+\/?)*$'
                 allowVlans:
                   items:
                     type: string
@@ -555,3 +552,8 @@ spec:
                     rewriteProfile:
                       type: string
                       pattern: '^\/([A-z0-9-_+]+\/)+([A-z0-9]+\/?)*$'
+                    logProfiles:
+                      items:
+                        type: string
+                        pattern: '^\/([A-z0-9-_+]+\/)*([A-z0-9-_\s]+\/?)*$'
+                      type: array
